    content is not being preserved. 'fromsection-{slot}' and 'tosection-{slot}'
    instead expand the given text as if for a section edit. This effectively
    declines T183823 in favor of T185723.
* (T198214) The 'disabletidy' parameter to action=parse has been
  deprecated; untidy output will not be supported by future wikitext
  parsers.

=== Action API internal changes in 1.32 ===
* Added 'ApiParseMakeOutputPage' hook.
* Parameter names may no longer contain '{' or '}', as these are now used for
  templated parameters.
* (T194950) Added 'ApiMaxLagInfo' hook.
* The following methods now take a RevisionRecord rather than a Revision. No
  external callers are known.
  * ApiFeedContributions::feedItemAuthor()
  * ApiFeedContributions::feedItemDesc()
  * ApiQueryRevisionsBase::extractRevisionInfo()
* The following deprecated methods have been removed:
  * ApiBase::profileIn() (deprecated in 1.25)
  * ApiBase::profileOut() (deprecated in 1.25)
  * ApiBase::safeProfileOut() (deprecated in 1.25)
  * ApiBase::profileDBIn() (deprecated in 1.25)
  * ApiBase::profileDBOut() (deprecated in 1.25)
  * ApiBase::dieUsage() (deprecated in 1.29)
  * ApiBase::dieUsageMsg() (deprecated in 1.29)
  * ApiBase::dieUsageMsgOrDebug() (deprecated in 1.29)
  * ApiBase::getErrorFromStatus() (deprecated in 1.29)
  * ApiBase::parseMsg() (deprecated in 1.29)
  * ApiBase::setWarning() (deprecated in 1.29)
  * ApiPageSet::getInvalidTitles() (deprecated in 1.26)
  * ApiQueryLogEvents::addLogParams() (deprecated in 1.25)
  * ApiUsageException::getCodeString() (deprecated in 1.29)
  * ApiUsageException::getMessageArray() (deprecated in 1.29)
* Class UsageException, deprecated in 1.29, has been removed.

=== Languages updated in 1.32 ===
MediaWiki supports over 350 languages. Many localisations are updated regularly.
Below only new and removed languages are listed, as well as changes to languages
because of Phabricator reports.

* (T193566) Added language support for Ambonese Malay (abs).